@@ -21,6 +21,7 @@
 - added FlowStream `message.replace(str)` for applying variables (alias for `message.variables()`)
 - added Flowstream `message.rewrite(data)` for rewriting message data
 - added support for promises for the `FLOWSTREAM().use()`
+- (critical) fixed WebSocket implementation for Safari +15
 
 ========================
 0.0.51
